@@ -144,7 +144,7 @@ function onGameInit()
 		AnimSetGearPosition(hero.gear, 1450, 910)
 	end
 
-	AnimInit()
+	AnimInit(true)
 	AnimationSetup()
 end
 
